--- a/src/app/periscope.component.html
+++ b/src/app/periscope.component.html
@@ -1,9 +1,34 @@
-[ <a [routerLink]="['/sync']">Data Sync</a>
-| <a [routerLink]="['/triage_pr']">Triage PR</a>
-| <a href (click)="auth(); $event.preventDefault()" [hidden]="authState">auth</a>
-  <a href (click)="logout(); $event.preventDefault()" [hidden]="!authState">
-    signout: {{authState?.github?.username}}
-  </a>
-]
+<md-sidenav-layout fullscreen>
+  <md-sidenav #sidenav class="app-sidenav">
+    <md-nav-list>
+      <a md-list-item [routerLink]="['/sync']">
+        <md-icon md-list-icon>sync</md-icon> Data Sync
+      </a>
+      <a md-list-item [routerLink]="['/triage_pr']">
+        <md-icon md-list-icon svgSrc="/assets/merge.svg"></md-icon> Triage PR
+      </a>
+      <a md-list-item href (click)="auth(); $event.preventDefault()" [hidden]="authState">
+        <md-icon md-list-icon>account_circle</md-icon> auth
+      </a>
+      <a md-list-item href (click)="logout(); $event.preventDefault()" [hidden]="!authState">
+          <md-icon md-list-icon>account_circle</md-icon> signout: {{authState?.github?.username}}
+      </a>
+    </md-nav-list>
 
-<router-outlet></router-outlet>
+  </md-sidenav>
+
+  <md-toolbar color="primary">
+    <button class="app-icon-button" (click)="sidenav.toggle()" md-icon-button>
+      <md-icon>menu</md-icon>
+    </button>
+
+    Periscope
+
+    <span class="app-toolbar-filler"></span>
+  </md-toolbar>
+
+  <div class="app-content">
+    <router-outlet></router-outlet>
+  </div>
+
+</md-sidenav-layout>
